--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Learning resources for the webpack academy workshop series for 2018",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack"
+    "build": "webpack",
+    "dev": "npm run build -- --mode development",
+    "prod": "npm run build -- --mode production"
   },
   "repository": {
     "type": "git",
