--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "workbox-webpack-plugin": "^3.2.0"
   },
   "dependencies": {
-    "d3": "^5.1.0"
+    "d3": "^5.1.0",
+    "webpack-dev-server": "^3.7.2"
   }
 }
